force-app/main/default/objects/clariti__CartSettings__mdt/clariti__CartSettings__mdt.object-meta.xml
<CustomObject>
    <label>Cart Settings</label>
    <pluralLabel>Cart Settings</pluralLabel>
</CustomObject>