force-app/main/default/objects/clariti__CartSettings__mdt/fields/clariti__AllowOverpayments__c.field-meta.xml
<CustomField>
    <fullName>clariti__AllowOverpayments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting allows the user to accept overpayments via Cash or Check payment methods</description>
    <inlineHelpText>This setting allows the user to accept overpayments via Cash or Check payment methods</inlineHelpText>
    <label>Allow Overpayments</label>
    <type>Checkbox</type>
</CustomField>