force-app/main/default/objects/clariti__CartSettings__mdt/fields/clariti__AllowPartialPayments__c.field-meta.xml
<CustomField>
    <fullName>clariti__AllowPartialPayments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting allows the user to pay for cart items partially</description>
    <inlineHelpText>This setting allows the user to pay for cart items partially</inlineHelpText>
    <label>Allow Partial Payments</label>
    <type>Checkbox</type>
</CustomField>