force-app/main/default/objects/clariti__CartSettings__mdt/fields/clariti__Cart_Timeout_Minutes__c.field-meta.xml
<CustomField>
    <fullName>clariti__Cart_Timeout_Minutes__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Cart Timeout Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>