force-app/main/default/objects/clariti__CartSettings__mdt/fields/clariti__Enable_Cart_Locking__c.field-meta.xml
<CustomField>
    <fullName>clariti__Enable_Cart_Locking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Cart Locking</label>
    <type>Checkbox</type>
</CustomField>