force-app/main/default/objects/clariti__CartSettings__mdt/validationRules/clariti__CartTimeoutMinutesValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__CartTimeoutMinutesValidation</fullName>
    <active>true</active>
    <description>Cart Timeout Minutes must be greater than zero and not empty</description>
    <errorConditionFormula>OR(ISBLANK(clariti__Cart_Timeout_Minutes__c), clariti__Cart_Timeout_Minutes__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>clariti__Cart_Timeout_Minutes__c</errorDisplayField>
    <errorMessage>Please enter a valid Cart Timeout Minutes value. Cart Timeout Minutes must be greater than zero and not empty</errorMessage>
</ValidationRule>